<resources>
    <string name="app_name">Housing Units</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="for_customer">For Customer</string>
    <string name="requests">Requests</string>
    <string name="reservations">Reservations</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="for_units_owners">For Units Owners</string>
    <string name="add_a_new_unit">Add a New Unit</string>
    <string name="your_units_on_the_app">Your Units on The App.</string>
    <string name="reservation_requests">Reservation Requests</string>
    <string name="contact_us">Contact us</string>
    <string name="call_us">Call us</string>
    <string name="about_the_app">About The App.</string>
    <string name="share_the_app">Share The App.</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="change_interface_language">Change interface language</string>
    <string name="change_result_layout">Change result layout</string>
    <string name="details">Details</string>
    <string name="room">Bedroom</string>
    <string name="bed">Bed</string>
    <string name="bathroom">Bathroom</string>
    <string name="change_default_currency">Change default currency</string>
    <string name="reviews">Reviews</string>
    <string name="about_owner">About Owner</string>
    <string name="location_map">Location Map</string>
    <string name="share_the_unit">Share The Unit</string>
    <string name="phone_is_copied">Phone Number is Copied</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="copy">Copy</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="rating">Rating</string>
    <string name="rating_unit">Unit Rating :</string>
    <string name="ads">Ads</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="log_in">Log In.</string>
    <string name="forget_password">Forget Password?</string>
    <string name="click_here">Click here.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Registration">Registration.</string>
    <string name="user_name">Your full name</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="already_have_an_account">Already, I Have an Account.</string>
    <string name="UserNameRequire">User Name is Require</string>
    <string name="select_country">Select a Country</string>
    <string name="language">Language</string>
    <string name="city">City</string>
    <string name="have_not_account">You don\'t have an Account?</string>
    <string name="create_now">Create now.</string>
    <string name="confirm_email">Confirm your email</string>
    <string name="ur_phone_no">Your phone number</string>
    <string name="rating_the_owner">Rating The Owner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="sign_up">Sign up.</string>
</resources>