<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/actionBar_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search"/>

    <item android:id="@+id/actionBar_cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always"
        android:title="@string/cart" />

    <item android:id="@+id/actionBar_notification"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="always"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/actionBar_more"
        android:icon="@drawable/ic_more"
        app:showAsAction="always"
        android:title="@string/more">

        <menu>
            <item
                android:id="@+id/actionBar_language"
                android:title="@string/change_interface_language"
                android:icon="@drawable/ic_language"/>
            <item
                android:id="@+id/actionBar_result_layout"
                android:title="@string/change_result_layout"
                android:icon="@drawable/ic_layout"/>
            <item
                android:id="@+id/actionBar_currency"
                android:title="@string/change_default_currency"
                android:icon="@drawable/ic_dollar"/>
        </menu>

    </item>

</menu>